[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/FormPage/FormStep.gd" type="Script" id=1]
[ext_resource path="res://UI_Elements/SkillBoxBorder.png" type="Texture" id=2]
[ext_resource path="res://UI_Elements/originDescriptionBox.png" type="Texture" id=3]
[ext_resource path="res://UI_Elements/SkillBoxBorderBig.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 3
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 24
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="DynamicFont" id=3]
size = 28
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[sub_resource type="DynamicFont" id=9]
size = 28
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.937255, 0.0823529, 1 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxTexture" id=13]
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 470, 200 )
modulate_color = Color( 0, 0.262745, 0.00784314, 1 )

[node name="FormStep" type="Control"]
unique_name_in_owner = true
anchor_left = 0.0104167
anchor_top = 0.0185185
anchor_right = 0.979167
anchor_bottom = 0.890741
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.0365591
anchor_top = 0.0245989
anchor_right = 0.990323
anchor_bottom = 1.05134
margin_left = -2.99995
margin_top = 3.8147e-05
margin_right = -0.0012207
margin_bottom = -0.00256348
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.106922
anchor_top = 0.129241
anchor_right = 0.894766
anchor_bottom = 0.852988
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/TextureRect2"]
anchor_left = 0.0208333
anchor_top = 0.0172414
anchor_right = 0.979167
anchor_bottom = 0.905172
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Question1" type="Control" parent="TextureRect/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_right = 1341.0
margin_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question1"]
anchor_left = 0.0387597
anchor_top = -0.00589624
anchor_right = 0.978682
anchor_bottom = 0.0814397
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "first_question_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question1"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0101266
anchor_top = 0.0715472
anchor_right = 0.979747
anchor_bottom = 0.0965472
margin_left = 7.0
margin_right = 1.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question1"]
anchor_left = 0.038777
anchor_top = 0.0885668
anchor_right = 0.96868
anchor_bottom = 0.378422
margin_bottom = 1.00002
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "first_question"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question1"]
anchor_left = 0.0387597
anchor_top = 0.389297
anchor_right = 0.978682
anchor_bottom = 0.477757
margin_top = 1.52588e-05
margin_bottom = -0.515015
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "answer_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question1"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0177215
anchor_top = 0.372334
anchor_right = 0.977215
anchor_bottom = 0.397333
margin_left = 1.0
margin_right = 3.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect2/VBoxContainer/Question1"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.0380313
anchor_top = 0.492754
anchor_right = 0.978372
anchor_bottom = 0.94686
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Answer" type="TextEdit" parent="TextureRect/TextureRect2/VBoxContainer/Question1/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/read_only = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
custom_styles/completion = SubResource( 16 )
text = "first_answer_default"
bookmark_gutter = true
context_menu_enabled = false
wrap_enabled = true
caret_block_mode = true

[node name="Question2" type="Control" parent="TextureRect/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_right = 1341.0
margin_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question2"]
anchor_left = 0.0387597
anchor_top = -0.00589624
anchor_right = 0.978682
anchor_bottom = 0.0814397
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "second_question_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question2"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0101266
anchor_top = 0.0715472
anchor_right = 0.979747
anchor_bottom = 0.0965472
margin_left = 7.0
margin_right = 1.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question2"]
anchor_left = 0.038777
anchor_top = 0.0885668
anchor_right = 0.96868
anchor_bottom = 0.378422
margin_bottom = 1.00002
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "second_question"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question2"]
anchor_left = 0.0387597
anchor_top = 0.389297
anchor_right = 0.978682
anchor_bottom = 0.477757
margin_top = 1.52588e-05
margin_bottom = -0.515015
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "answer_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question2"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0177215
anchor_top = 0.372334
anchor_right = 0.977215
anchor_bottom = 0.397333
margin_left = 1.0
margin_right = 3.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect2/VBoxContainer/Question2"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.0380313
anchor_top = 0.492754
anchor_right = 0.978372
anchor_bottom = 0.94686
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Answer" type="TextEdit" parent="TextureRect/TextureRect2/VBoxContainer/Question2/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/read_only = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
custom_styles/completion = SubResource( 16 )
text = "second_answer_default"
bookmark_gutter = true
context_menu_enabled = false
wrap_enabled = true
caret_block_mode = true

[node name="Question3" type="Control" parent="TextureRect/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_right = 1341.0
margin_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question3"]
anchor_left = 0.0387597
anchor_top = -0.00589624
anchor_right = 0.978682
anchor_bottom = 0.0814397
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "third_question_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question3"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0101266
anchor_top = 0.0715472
anchor_right = 0.979747
anchor_bottom = 0.0965472
margin_left = 7.0
margin_right = 1.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question3"]
anchor_left = 0.038777
anchor_top = 0.0885668
anchor_right = 0.96868
anchor_bottom = 0.378422
margin_bottom = 1.00002
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "third_question"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question3"]
anchor_left = 0.0387597
anchor_top = 0.389297
anchor_right = 0.978682
anchor_bottom = 0.477757
margin_top = 1.52588e-05
margin_bottom = -0.515015
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "answer_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question3"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0177215
anchor_top = 0.372334
anchor_right = 0.977215
anchor_bottom = 0.397333
margin_left = 1.0
margin_right = 3.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect2/VBoxContainer/Question3"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.0380313
anchor_top = 0.492754
anchor_right = 0.978372
anchor_bottom = 0.94686
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Answer" type="TextEdit" parent="TextureRect/TextureRect2/VBoxContainer/Question3/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/read_only = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
custom_styles/completion = SubResource( 16 )
text = "third_answer_default"
bookmark_gutter = true
context_menu_enabled = false
wrap_enabled = true
caret_block_mode = true

[node name="Question4" type="Control" parent="TextureRect/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_right = 1341.0
margin_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question4"]
anchor_left = 0.0387597
anchor_top = -0.00589624
anchor_right = 0.978682
anchor_bottom = 0.0814397
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "fourth_question_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question4"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0101266
anchor_top = 0.0715472
anchor_right = 0.979747
anchor_bottom = 0.0965472
margin_left = 7.0
margin_right = 1.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question4"]
anchor_left = 0.038777
anchor_top = 0.0885668
anchor_right = 0.96868
anchor_bottom = 0.378422
margin_bottom = 1.00002
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "fourth_question"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question4"]
anchor_left = 0.0387597
anchor_top = 0.389297
anchor_right = 0.978682
anchor_bottom = 0.477757
margin_top = 1.52588e-05
margin_bottom = -0.515015
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "answer_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question4"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0177215
anchor_top = 0.372334
anchor_right = 0.977215
anchor_bottom = 0.397333
margin_left = 1.0
margin_right = 3.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect2/VBoxContainer/Question4"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.0380313
anchor_top = 0.492754
anchor_right = 0.978372
anchor_bottom = 0.94686
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Answer" type="TextEdit" parent="TextureRect/TextureRect2/VBoxContainer/Question4/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/read_only = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
custom_styles/completion = SubResource( 16 )
text = "fourth_answer_default"
bookmark_gutter = true
context_menu_enabled = false
wrap_enabled = true
caret_block_mode = true

[node name="Question5" type="Control" parent="TextureRect/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_right = 1341.0
margin_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question5"]
anchor_left = 0.0387597
anchor_top = -0.00589624
anchor_right = 0.978682
anchor_bottom = 0.0814397
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "fifth_question_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question5"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0101266
anchor_top = 0.0715472
anchor_right = 0.979747
anchor_bottom = 0.0965472
margin_left = 7.0
margin_right = 1.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question5"]
anchor_left = 0.038777
anchor_top = 0.0885668
anchor_right = 0.96868
anchor_bottom = 0.378422
margin_bottom = 1.00002
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "fifth_question"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question5"]
anchor_left = 0.0387597
anchor_top = 0.389297
anchor_right = 0.978682
anchor_bottom = 0.477757
margin_top = 1.52588e-05
margin_bottom = -0.515015
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "answer_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question5"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0177215
anchor_top = 0.372334
anchor_right = 0.977215
anchor_bottom = 0.397333
margin_left = 1.0
margin_right = 3.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect2/VBoxContainer/Question5"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.0380313
anchor_top = 0.492754
anchor_right = 0.978372
anchor_bottom = 0.94686
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Answer" type="TextEdit" parent="TextureRect/TextureRect2/VBoxContainer/Question5/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/read_only = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
custom_styles/completion = SubResource( 16 )
text = "fifth_answer_default"
bookmark_gutter = true
context_menu_enabled = false
wrap_enabled = true
caret_block_mode = true

[node name="Question6" type="Control" parent="TextureRect/TextureRect2/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
margin_right = 1341.0
margin_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question6"]
anchor_left = 0.0387597
anchor_top = -0.00589624
anchor_right = 0.978682
anchor_bottom = 0.0814397
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "sixth_question_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question6"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0101266
anchor_top = 0.0715472
anchor_right = 0.979747
anchor_bottom = 0.0965472
margin_left = 7.0
margin_right = 1.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Description" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question6"]
anchor_left = 0.038777
anchor_top = 0.0885668
anchor_right = 0.96868
anchor_bottom = 0.378422
margin_bottom = 1.00002
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "sixth_question"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="TextureRect/TextureRect2/VBoxContainer/Question6"]
anchor_left = 0.0387597
anchor_top = 0.389297
anchor_right = 0.978682
anchor_bottom = 0.477757
margin_top = 1.52588e-05
margin_bottom = -0.515015
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "answer_label"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator2" type="HSeparator" parent="TextureRect/TextureRect2/VBoxContainer/Question6"]
self_modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0177215
anchor_top = 0.372334
anchor_right = 0.977215
anchor_bottom = 0.397333
margin_left = 1.0
margin_right = 3.00006
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect2/VBoxContainer/Question6"]
self_modulate = Color( 0, 0.262745, 0.00784314, 1 )
anchor_left = 0.0380313
anchor_top = 0.492754
anchor_right = 0.978372
anchor_bottom = 0.94686
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Answer" type="TextEdit" parent="TextureRect/TextureRect2/VBoxContainer/Question6/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/read_only = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
custom_styles/completion = SubResource( 16 )
text = "sixth_answer_default"
bookmark_gutter = true
context_menu_enabled = false
wrap_enabled = true
caret_block_mode = true

[node name="PreviousQuestion" type="Button" parent="TextureRect/TextureRect2"]
unique_name_in_owner = true
anchor_left = 0.0222517
anchor_top = 0.913703
anchor_right = 0.331921
anchor_bottom = 0.981783
margin_right = 2.99998
margin_bottom = 2.0
custom_colors/font_color_disabled = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_focus = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "previous_button"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ClearAnswer" type="Button" parent="TextureRect/TextureRect2"]
unique_name_in_owner = true
anchor_left = 0.34291
anchor_top = 0.913986
anchor_right = 0.651302
anchor_bottom = 0.984975
custom_colors/font_color_disabled = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_focus = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "clear_button"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextQuestion" type="Button" parent="TextureRect/TextureRect2"]
unique_name_in_owner = true
anchor_left = 0.657196
anchor_top = 0.913986
anchor_right = 0.961302
anchor_bottom = 0.982322
margin_right = 6.0
margin_bottom = 1.85706
custom_colors/font_color_disabled = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_focus = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0, 0.717647, 0.0392157, 1 )
custom_colors/font_color_pressed = Color( 0, 0.717647, 0.0392157, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "next_button"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="TextureRect/TextureRect2/PreviousQuestion" to="." method="_on_SelectedPreviousQuestion_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect2/ClearAnswer" to="." method="_on_ClearAnswer_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect2/NextQuestion" to="." method="_on_SelectedNextQuestion_pressed"]
